Added -I. for link-gpiochip
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22265 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libsimpleio/Makefile
+++ b/toolchain/libsimpleio/Makefile
@@ -91,7 +91,7 @@ libsimpleio.lib:
 # Compile link-gpiochip
 
 link-gpiochip: libsimpleio.a
-	$(CC) -Wall -o$@ $(LIBSIMPLEIO)/hotplug/linux/link-gpiochip.c libsimpleio.a
+	$(CC) -Wall -I. -o$@ $(LIBSIMPLEIO)/hotplug/linux/link-gpiochip.c libsimpleio.a
 	$(STRIP) $@
 
 ###############################################################################
