Fixed whitespace in COPYING.
Added a blank line before zlib.
Removed two blank lines after libcap-ng.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22282 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -997,6 +997,7 @@ $(INSTALLDIR)/COPYING: $(SUBORDINATES)
 	@echo ""					>>$@
 	@echo "**** openssl:"				>>$@
 	@cat $(OPENSSL_SRC)/LICENSE.txt			>>$@
+	@echo ""					>>$@
 	@echo "**** zlib:"				>>$@
 	@echo ""					>>$@
 	@tail -n 31 $(ZLIB_SRC)/README			>>$@
@@ -1064,7 +1065,7 @@ $(INSTALLDIR)/COPYING: $(SUBORDINATES)
 	@echo "**** libcap-ng:"				>>$@
 	@echo ""					>>$@
 	@cat $(LIBCAP_SRC)/COPYING			>>$@
-	@cat $(LIBCAP_SRC)/COPYING.LIB			>>$@
+	@head -n -2 $(LIBCAP_SRC)/COPYING.LIB		>>$@
 	#@echo ""					>>$@
 	#@echo "**** dcerpc:"				>>$@
 	#@echo ""					>>$@
