detach doesn't need libsimpleio
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@22389 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -213,7 +213,7 @@ endif
 # Build detach
 
 detach: detach.c
-	$(CROSS_COMPILE)gcc -Wall -o $@ $^ -lsimpleio
+	$(CROSS_COMPILE)gcc -Wall -o $@ $^
 
 ###############################################################################
 
